--- a/learn_templates/templates/myApp/other.html
+++ b/learn_templates/templates/myApp/other.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends "myapp/base.html" %}
+{% extends "myApp/base.html" %}
 {% block body_block %}
 <h1>Welcome to Other</h1>
 <h2>This is an example of template inheritance</h2>
