--- a/learn_templates/templates/myApp/index.html
+++ b/learn_templates/templates/myApp/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> {% extends "myapp/base.html" %} {% block body_block %}
+<!DOCTYPE html> {% extends "myApp/base.html" %} {% block body_block %}
 {% load my_extras %}
 
 <h1>Welcome to Index</h1>
